<resources>
    <string name="action_settings">Settings</string>
    <string name="all_participants">All participants</string>
    <string name="app_name">RealtimeSdkDemo</string>
    <string name="app_version">App Version: %1s</string>
    <string name="audio">Audio</string>
    <string name="cancel">Cancel</string>
    <string name="country">Country</string>
    <string name="create">Create</string>
    <string name="create_room">Create Room</string>
    <string name="end_call_to_leave">End call to leave room</string>
    <string name="error">Error</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="join_room">Join</string>
    <string name="leave_room">Leave</string>
    <string name="message">Message</string>
    <string name="password">Password</string>
    <string name="previous">Previous</string>
    <string-array name="resource_array">
        <item>Audio</item>
        <item>Video</item>
        <item>Audio/Video</item>
    </string-array>
    <string name="room_name">Room name: %1s</string>
    <string name="room_already_exists">The room already exists</string>
    <string name="room_not_found">The room was not found</string>
    <string name="room_name_missing">The room name is missing</string>
    <string name="room_name_required">Room name (required)</string>
    <string name="room_view_fragment_label">Room Fragment</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="send">Send</string>
    <string name="send_message">Send message</string>
    <string name="sdk_version">SDK Version: %1s</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_fragment_label">Sign in Fragment</string>
    <string name="system_unreachable">The VCS system is not reachable at this time</string>
    <string name="title_text">vcs-realtime-sdk-android demo</string>
    <string name="username">Username</string>
    <string name="video">Video</string>
    <string name="your_name">Your name</string>

    <!--- SignIn Screen descriptors -->
    <string name="settings_button_desc">Enter settings</string>
    <string name="room_input_desc">Enter room name</string>
    <string name="name_input_desc">Enter your name</string>
    <string name="country_input_desc">Enter country name</string>
    <string name="create_room_desc">Create room</string>
    <string name="join_room_desc">Join room</string>
    <string name="audio_video_desc">Audio and video selection</string>

    <!--- Call Screen descriptors -->
    <string name="switch_camera_desc">Switch camera</string>
    <string name="video_desc">Video</string>
    <string name="video_off_desc">Video off</string>
    <string name="speaker_desc">Speaker</string>
    <string name="speaker_off_desc">Speaker off</string>
    <string name="message_desc">Send message</string>
    <string name="microphone_desc">Microphone</string>
    <string name="microphone_off_desc">Microphone off</string>
    <string name="leave_room_desc">Leave room</string>
    <string name="local_video_desc">Local video view</string>
    <string name="remote_video_desc">Remote video view</string>
    <string name="remote_user_name_desc">Remote user name</string>
    <string name="room_name_desc">Room name</string>

    <!--- Preferences descriptors -->
    <string name="app_server_desc">Application server</string>
    <string name="app_server_input_desc">Enter application server</string>
    <string name="username_desc">Username</string>
    <string name="username_input_desc">Enter username</string>
    <string name="password_desc">Password</string>
    <string name="password_input_desc">Enter password</string>
    <string name="auto_gain_control_desc">Enable or disable auto gain control</string>
    <string name="default_hd_desc">Enable or disable default HD</string>
    <string name="scale_down_video_resolution_desc">Enable or disable scaling down video resolution</string>
    <string name="hd_video_desc">Enable or disable HD video</string>
    <string name="monitor_qos_desc">Enable or disable QoS monitoring</string>
    <string name="delay_local_stream_desc">Enable or disable delay of local stream</string>

    <!--- Preferences Screen -->
    <string name="back_button_desc">Navigate back</string>
    <string name="global_sdk_title">Global SDK Settings</string>
    <string name="app_server_title">Application server</string>
    <string name="app_server_summary">Server that provides room tokens based on \'Room name\' and API key</string>
    <string name="username_title">Username</string>
    <string name="username_summary">Username to authenticate creating a room</string>
    <string name="password_title">Password</string>
    <string name="password_summary">Password to authenticate creating a room</string>
    <string name="auto_gain_control_title">Automatic Gain Control</string>
    <string name="auto_gain_control_summary">Enable or disable Automatic Gain Control on the audio track</string>
    <string name="default_hd_video_title">Default HD Video</string>
    <string name="default_hd_video_summary">Share local video in HD quality</string>
    <string name="scale_down_video_resolution_title">Scale down video resolution</string>
    <string name="scale_down_video_resolution_summary">Enable or disable scaling down video resolution</string>

    <string name="session_options_title">Session options</string>
    <string name="hd_video_title">HD Video</string>
    <string name="hd_video_summary">Share local video in HD quality for next session</string>
    <string name="monitor_qos_title">Monitor QoS</string>
    <string name="monitor_qos_summary">If true, a new connection is configured to monitor and log WebRTC call Quality of Service stats</string>
    <string name="delay_local_stream_title">Delay local stream</string>
    <string name="delay_local_stream_summary">If true, the local media stream is only created after least two participants are connected to a room</string>
</resources>