<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true"
    tools:context="net.atos.vcs.realtime.demo.RoomActivity">

    <FrameLayout
        android:id="@+id/remoteViewsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <net.atos.vcs.realtime.demo.LocalVideoView
        android:id="@+id/local_view"
        android:layout_width="127dp"
        android:layout_height="175dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/local_video_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/camera_switch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/switch_camera_desc"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="0dp"
        android:src="@drawable/action_camera_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:divider="@drawable/spacer_medium"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linear_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:divider="@drawable/spacer_medium"
            android:showDividers="middle"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/video_button"
                android:layout_width="@dimen/call_button_width"
                android:layout_height="@dimen/call_button_height"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/dark_blue"
                android:contentDescription="@string/camera_desc"
                android:padding="@dimen/button_padding"
                android:scaleType="center"
                android:src="@drawable/action_video" />

            <ImageButton
                android:id="@+id/speaker_button"
                android:layout_width="@dimen/call_button_width"
                android:layout_height="@dimen/call_button_height"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/dark_blue"
                android:contentDescription="@string/speaker_desc"
                android:padding="@dimen/button_padding"
                android:scaleType="center"
                android:src="@drawable/action_speakerphone_off" />

            <ImageButton
                android:id="@+id/microphone_button"
                android:layout_width="@dimen/call_button_width"
                android:layout_height="@dimen/call_button_height"
                android:background="@drawable/rounded_corners"
                android:backgroundTint="@color/dark_blue"
                android:contentDescription="@string/mute_desc"
                android:padding="@dimen/button_padding"
                android:scaleType="center"
                android:src="@drawable/action_microphone" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/leave_room_button"
            android:layout_width="@dimen/end_call_button_width"
            android:layout_height="@dimen/call_button_height"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/call_end_red"
            android:contentDescription="@string/leave_room_desc"
            android:padding="@dimen/button_padding"
            android:scaleType="center"
            android:src="@drawable/action_call_end" />

        <TextView
            android:id="@+id/room_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/room_name_desc"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
